crates/sui-kv-rpc/src/v2/snapshots/sui_kv_rpc__v2__pin_tests__walk__transactions__limit3_asc.snap
---
source: crates/sui-kv-rpc/src/v2/pin_tests.rs
expression: transcript
---
== page 0 ==
#0 item tx_seq=0 | wm.cursor=item(cp=0,tx=0) wm.cp=- | end=-
#1 item tx_seq=1 | wm.cursor=item(cp=1,tx=1) wm.cp=0 | end=-
#2 item tx_seq=2 | wm.cursor=item(cp=1,tx=2) wm.cp=0 | end=QUERY_END_REASON_ITEM_LIMIT

== page 1 ==
#0 item tx_seq=3 | wm.cursor=item(cp=1,tx=3) wm.cp=- | end=-
#1 item tx_seq=4 | wm.cursor=item(cp=3,tx=4) wm.cp=2 | end=-
#2 item tx_seq=5 | wm.cursor=item(cp=3,tx=5) wm.cp=2 | end=QUERY_END_REASON_ITEM_LIMIT

== page 2 ==
#0 item tx_seq=6 | wm.cursor=item(cp=4,tx=6) wm.cp=3 | end=-
#1 item tx_seq=7 | wm.cursor=item(cp=4,tx=7) wm.cp=3 | end=-
#2 no-item | wm.cursor=boundary(cp=5,tx=8) wm.cp=4 | end=QUERY_END_REASON_LEDGER_TIP
